--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>VEDANT LAXKAR </title>
+  <title>AYUSH GUPTA </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.jpg" rel="icon">
+  <link href="assets/img/my.jpg" rel="icon">
   <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Fonts -->
@@ -42,13 +42,13 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my pic9.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/my_pic4.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <img src="assets/img/logo.jpg" alt="">
-      <h1 class="sitename">Vedant Laxkar</h1>
+      <h1 class="sitename">AYUSH GUPTA</h1>
     </a>
 
     <div class="social-links text-center">
@@ -94,10 +94,10 @@
     <!-- Hero Section -->
     <section id="home" class="hero section dark-background">
 
-      <img src="assets/img/my_pic10.jpg" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/my_pic9.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Vedant Laxkar
+        <h2>AYUSH GUPTA
         </h2>
         <p>I'm <span class="typed" data-typed-items="Data scientist, Python Developer ">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
@@ -117,7 +117,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my_pic4.jpg" class="img-fluid" alt="">
+            <img src="assets/img/my_pic9.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Data Scientist &amp; Python Developer.</h2>
@@ -127,7 +127,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>17 Mar 2006</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>25 JUN 2002</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.vedantlaxkar.github.io.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 99298 40564</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Jaipur , Rajasthan</span></li>
