--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <div class="social-links text-center">
       <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a> -->
       <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
-      <a href="https://www.instagram.com/_the.vedant?igsh=d2w1aDFydnVjczNn" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="https://github.com/vedantlaxkar" class="github"><i class="bi bi-github"></i></a>
-      <a href="https://www.linkedin.com/in/vedant-laxkar-128107259/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.instagram.com/ayush_gupta0002?igsh=MWNobW5kNjMxcWp6dw==" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://github.com/ayush202446" class="github"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/ayush-gupta-73674724a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -128,16 +128,16 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>25 JUN 2002</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.vedantlaxkar.github.io.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 99298 40564</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.ayush gupta.github.io.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8690489822</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Jaipur , Rajasthan</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>18</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Graduate</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Vedantlaxkar684@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ayushkhandewal33@gmail.com</span></li>
                 </ul>
               </div>
             </div>
@@ -283,13 +283,13 @@
             <h3 class="resume-title">Summary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Vedant Laxkar</h4>
+              <h4>Ayush Gupta</h4>
               <p><em>Innovative and results-oriented Software Developer with 3+ years of experience in designing, developing, and implementing user-centric software solutions. Skilled in Python, data science, machine learning, and data visualization, with a strong foundation in object-oriented programming. Proven ability to manage complex projects from initial concept to final deployment, ensuring high-quality, reliable deliverables.</em></p>
               <ul>
                 <li>Tunga Jaipur (Raj.)
                   India</li>
-                <li>+91 99298 40564</li>
-                <li>Vedantlaxkar684@gmail.com</li>
+                <li>+91 8690489822</li>
+                <li>ayushkhandewal33@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -302,7 +302,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>SENIOR SECONDARY EDUCATION (PCM)</h4>
+              <h4>SENIOR SECONDARY EDUCATION (ART)</h4>
               <h5>2021 - 2022</h5>
               <p><em>RAJASTHAN BOARD OF SECONDARY EDUCATION</em></p>
               <p> Shivaji Adarsh Senior Secondary School, tunga, Jaipur (Raj.)</p>
@@ -313,11 +313,11 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>SoftRaw IT Solution Pvt. Ltd.></h4>
+              <h4>Grras IT Solution Pvt. Ltd.></h4>
               <h5>03 May 2024 - present</h5>
-              <p><em>Mall Of Jaipur, Jaipur, IN </em></p>
+              <p><em>Gopalpura, Jaipur, IN </em></p>
               <ul>
-                <li>Dynamic and dedicated intern at SoftRaw IT Solutions Pvt. Ltd., contributing to the design, development, and implementation of software solutions.</li>
+                <li>Dynamic and dedicated intern at Grras IT Solutions Pvt. Ltd., contributing to the design, development, and implementation of software solutions.</li>
                 <li>Assisting a team of experienced developers in various aspects of project execution, from coding to testing and deployment. </li>
                 <li>Learning and applying industry best practices under supervision, ensuring high-quality deliverables and gaining valuable hands-on experience in software development.</li>
                 <li>Documented project workflows, coding standards, and best practices, facilitating knowledge sharing and smooth project transitions.</li>
@@ -326,7 +326,7 @@
 
             <div class="resume-item">
               <h4>Codsoft</h4>
-              <h5>15 Feb 2024 - 15 mar 2024</h5>
+              <h5>25 Feb 2024 - 26 mar 2024</h5>
               <p><em>kolkta, IN</em></p>
               <ul>
                 <li>Dynamic and dedicated intern at Codsoft, contributing to the development of software applications including "Python Basic Contact Book App," "Python Rock Paper Scissor," and "Python To-Do List."</li>
@@ -727,7 +727,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Me</h3>
-                  <p>+91 99298 40564</p>
+                  <p>+91 8690489822</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -735,7 +735,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Me</h3>
-                  <p>Vedantlaxkkar684@gmail.com.com</p>
+                  <p>ayushkhandewal33@gmail.com.com</p>
                 </div>
               </div><!-- End Info Item -->
 
